--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -91,12 +92,13 @@
                         <p>Our membership management software provides full automation of membership renewals and
                             payments</p>
                     </div>
-                     <div class="card">
+                    <div class="card">
                         <img src="imgs/icon2.png" alt="">
                         <h1>National <br> Associations</h1>
-                        <p>Our membership management software provides full automation of membership renewals and payments</p>
+                        <p>Our membership management software provides full automation of membership renewals and
+                            payments</p>
                     </div>
-                     <div class="card">
+                    <div class="card">
                         <img src="imgs/icon3.png" alt="">
                         <h1>Clubs And <br> Groups</h1>
                         <p>Our membership management software provides full automation of membership renewals and
@@ -105,19 +107,196 @@
                 </div>
                 <div class="imgs">
                     <div class="section_img">
-                    <img src="imgs/Frame 35.png" alt="">
-                </div>
-                <div class="section_info">
-                        <h1>The unseen of spending  three years <br> at Pixelgrade</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+                        <img src="imgs/Frame 35.png" alt="">
+                    </div>
+                    <div class="section_info">
+                        <h1>The unseen of spending three years <br> at Pixelgrade</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed
+                            accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta.
+                            Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis
+                            massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
                         <button class="btn"> Learn More</button>
-                </div>
+                    </div>
                 </div>
             </div>
 
         </section>
+        <section class="section3">
+            <div class="container">
+                <div class="icons">
+                    <div class="section3_info">
+                        <h1>Helping a local <br><span>business reinvent itself</span> </h1>
+                        <p>We reached here with our hard work and dedication</p>
+                    </div>
+                    <div class="section3_title">
+                        <div class="numbers">
+                            <div class="number">
+                                <div>
+                                    <img src="imgs/icon4.svg" alt="">
+                                </div>
+                                <div>
+                                    <h2>2,245,341</h2>
+                                    <p>Members</p>
+                                </div>
+                            </div>
+                            <div class="number">
+                                <div>
+                                    <img src="imgs/icon5.svg" alt="">
+                                </div>
+                                <div>
+                                    <h2>46,328</h2>
+                                    <p>Members</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="numbers">
+                            <div class="number">
+                                <div>
+                                    <img src="imgs/icon8.svg" alt="">
+                                </div>
+                                <div>
+                                    <h2>828,867</h2>
+                                    <p>Members</p>
+                                </div>
+                            </div>
+                            <div class="number">
+                                <div>
+                                    <img src="imgs/icon7.svg" alt="">
+                                </div>
+                                <div>
+                                    <h2>1,926,436</h2>
+                                    <p>Members</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section4">
+            <div class="container">
+                <div class="section_img">
+                    <img src="imgs/Frame 35.png" alt="">
+                </div>
+                <div class="section_info">
+                    <h1>How to design your site footer like we did</h1>
+                    <p>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie,
+                        massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices
+                        mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis
+                        finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget
+                        nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit
+                        venenatis libero. Donec consectetur faucibus ipsum id gravida.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+            </div>
+        </section>
+        <section class="section5">
+            <div class="container">
+                <div class="section_img">
+                    <img src="imgs/image 9.png" alt="">
+                </div>
+                <div class="section_info">
+                    <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus
+                        tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in,
+                        gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie,
+                        nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla
+                        sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque
+                        malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget
+                        efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.
+                    </p>
+                    <h2>Tim Smith</h2>
+                    <h4>British Dragon Boat Racing Association</h4>
+                    <div class="icons">
+                        <img src="imgs/seclogo.png" alt="">
+                        <img src="imgs/seclogo1.png" alt="">
+                        <img src="imgs/seclogo2.png" alt="">
+                        <img src="imgs/seclogo3.png" alt="">
+                        <img src="imgs/seclogo4.png" alt="">
+                        <img src="imgs/seclogo5.png" alt="">
+                        <button class="btn">Meet all customers</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section6">
+            <div class="container">
+                <div class="title">
+                    <h1>Caring is the new marketing</h1>
+                    <p>The Nexcent blog is the best place to read about the latest membership insights,<br> trends and
+                        more. See who's joining the community,<br> read about how our community are increasing their
+                        membership income and lot's more.​</p>
+                </div>
+                <div class="block">
+                    <div class="box">
+                        <img src="imgs/image 18.png" alt="">
+                        <div class="words">
+                            <h4>Creating Streamlined Safeguarding Processes with OneRen</h4>
+                            <button class="btn">Readmore</button>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="imgs/image 19.png" alt="">
+                        <div class="words">
+                            <h4>Creating Streamlined Safeguarding Processes with OneRen</h4>
+                            <button class="btn">Readmore</button>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="imgs/image 20.png" alt="">
+                        <div class="words">
+                            <h4>Creating Streamlined Safeguarding Processes with OneRen</h4>
+                            <button class="btn">Readmore</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section7">
+            <div class="container">
+                <h1>Pellentesque suscipit <br> fringilla libero eu.</h1>
+                <div class="btns">
+                    <button>Get a Demo</button>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="block1">
+                <div class="carts">
+                    <img src="imgs/logo1.png" alt="">
+                    <h3>Copyright © 2020 Nexcent ltd. <br>
+                        All rights reserved</h3>
+                     <div class="ikon">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                     </div>   
+                </div>
+                <div class="carts">
+                    <h2>Company</h2>
+                    <h4>About us</h4>
+                    <h4>Blog</h4>
+                    <h4>Contact us</h4>
+                    <h4>Pricing</h4>
+                    <h4>Testimonials</h4>
+                </div>
+                <div class="carts">
+                    <h2>Support</h2>
+                    <h4>Help center</h4>
+                    <h4>Terms of service</h4>
+                    <h4>Legal</h4>
+                    <h4>Privacy policy</h4>
+                    <h4>Status</h4>
+                </div>
+                <div class="carts">
+                    <h1>Stay up to date</h1>
+                    <input placeholder="Your email address" type="text">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
